# Simple_IMChat

./: .gitignore  README.md  benchmark.conf  docker-compose.yml  init.sql
.agents/: AGENTS.md
ChatServer/: CMakeLists.txt  Dockerfile  benchmark.py  mysql.conf  nginx.conf  nginx_local.conf
ChatServer/include/: public.hpp
ChatServer/include/db/: Connection.h  ConnectionPool.h  Redis.h
ChatServer/include/net/: Buffer.h  Epoll.h  Socket.h  TcpConnection.h
ChatServer/include/server/: ChatServer.h  ThreadPool.hpp  chatservice.hpp
ChatServer/include/server/model/: User.hpp  UserModel.hpp  friend.hpp  friendmodel.hpp  friendrequest.hpp  friendrequestmodel.hpp  messagehistory.hpp  messagehistorymodel.hpp  offlinemessagemodel.hpp
ChatServer/proto/: msg.pb.cc  msg.pb.h  msg.proto  msg_pb2.py
ChatServer/src/: main.cpp
ChatServer/src/db/: Connection.cpp  ConnectionPool.cpp  Redis.cpp
ChatServer/src/net/: Buffer.cpp  Epoll.cpp  Socket.cpp  TcpConnection.cpp
ChatServer/src/server/: ChatServer.cpp  chatservice.cpp
ChatServer/src/server/model/: UserModel.cpp  friendmodel.cpp  friendrequestmodel.cpp  messagehistorymodel.cpp  offlinemessagemodel.cpp
IMchat/: CMakeLists.txt  main.cpp  resources.qrc
IMchat/net/: imclient.cpp  imclient.h  snowflake.h
IMchat/proto/: msg.pb.cc  msg.pb.h  msg.proto  public.h
IMchat/ui/: chatwidget.cpp  chatwidget.h  chatwidget.ui  friendrequestdialog.cpp  friendrequestdialog.h  friendrequestdialog.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  registerwidget.cpp  registerwidget.h  registerwidget.ui  style.qss
TaskRecords/: 2026-06-24_IMchat_Client_Improvement.md  2026-06-25_CMake路径与动态库依赖隐患说明.md
服务端代码修改记录/: 01_应用层双向ACK与可靠投递机制.md
软件体系结构/: IM即时通讯系统报告.docx  Simple_IMChat_UML及架构图大全.md  Simple_IMChat_汇报PPT大纲与演讲稿.md  Simple_IMChat_汇报幻灯片.pptx  Simple_IMChat_汇报幻灯片_v2.pptx  Simple_IMChat_汇报幻灯片_v3.pptx  Simple_IMChat_汇报幻灯片_v4.pptx  Simple_IMChat_软件体系结构课程设计报告.md  generate_slides.py  ~$Simple_IMChat_汇报幻灯片_v3.pptx  ~$即时通讯系统报告.docx  报告.docx  课设要求.txt  高性能分布式即时通讯系统架构设计 (1).pptx
软件体系结构/课程PPT/: 10 从CS到BS.pptx  11 其他体系结构风格.pptx  12 4+1.pptx  13 体系结构风格的选择.pptx  14 体系结构的设计实现.pptx  2生命周期.pptx  3 软件体系结构的质量.pptx  5仓库与黑板.pptx  7面向对象.pptx  8 主程序-子程序与层次.pptx  9 解释器与基于规则.pptx
项目优化内容/: 01_应用层双向ACK与可靠投递.md
